# WebViewPreLaunch

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  webview_creation_arguments.cpp  webview_creation_arguments.h  webview_creation_arguments.hpp  webview_launch.cpp  webview_launch.h  webview_launch_main.cpp  webview_launch_test.cpp  webview_prelaunch.cpp  webview_prelaunch.h  webview_prelaunch_controller.cpp  webview_prelaunch_controller.h  webview_prelaunch_controller.hpp  webview_prelaunch_controller_win.cpp  webview_prelaunch_controller_win.hpp  webview_prelaunch_demo.cpp  webview_prelaunch_test.cpp  webview_prelaunch_test_win.cpp
.github/workflows/: cmake-multi-platform.yml
